--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@prisma/client": "^4.6.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
     "next": "13.0.2",
+    "next-auth": "^4.16.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.8.4"
@@ -33,6 +35,6 @@
     "@storybook/testing-library": "0.0.13",
     "babel-loader": "^8.3.0",
     "eslint-plugin-storybook": "^0.6.7",
-    "prisma": "^4.6.0"
+    "prisma": "^4.6.1"
   }
 }
