--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.209.0",
     "@prisma/client": "^4.6.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
-    "next": "13.0.2",
+    "next": "^13.0.3",
     "next-auth": "^4.16.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
