--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "cookie": "^0.5.0",
+    "cookie-session": "^2.0.0",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
     "next": "^13.0.3",
@@ -35,6 +37,8 @@
     "@storybook/manager-webpack5": "^6.5.13",
     "@storybook/react": "^6.5.13",
     "@storybook/testing-library": "0.0.13",
+    "@types/cookie": "^0.5.1",
+    "@types/cookie-session": "^2.0.44",
     "babel-loader": "^8.3.0",
     "eslint-plugin-storybook": "^0.6.7",
     "prisma": "^4.6.1"
